--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,8 +1,12 @@
-a{
+a {
   text-decoration: none;
+  
+}
+a:hover {
+  text-decoration: none;
+  
 }
 .wrapper{
-    margin-top: 20px;
     height: 500px;
 }
 .header{
@@ -170,4 +174,54 @@ a{
 }
 #cart{
   width: 15%;
+}
+.register-form-container{
+  position: absolute;
+  right: 0;
+  z-index: 10;
+  width: 50%;
+}
+.register-form{
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+}
+.user-session{
+  display: flex;
+  flex-wrap: nowrap;
+  align-self: flex-end;
+}
+.login-header{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+.form-register-close:hover{
+  cursor:pointer;
+}
+.new-reply-form{
+  width: 83%;
+  margin:20px auto;
+}
+#reviews{
+  overflow: auto;
+}
+.reviews-show{
+  width: 70%;
+  
+}
+.show-more-reviews{
+  display: none;
+  justify-content: center;
+}
+.show-more-reviews img:hover{
+  cursor: pointer;
+}
+@keyframes reviews-increase{
+  from {
+    height:200px;
+  }
+  to {
+    height:600px;
+  }
 }
