--- a/public/css/main.css
+++ b/public/css/main.css
@@ -217,11 +217,13 @@ a:hover {
 .show-more-reviews img:hover{
   cursor: pointer;
 }
-@keyframes reviews-increase{
-  from {
-    height:200px;
-  }
-  to {
-    height:600px;
-  }
+.add-product-rating{
+  display: flex;
+  justify-content: center;
+  width:100%;
+  margin-bottom: 5px;
+  margin-top: 5px;
+}
+.close-flash:hover{
+  cursor: pointer;
 }
