--- a/public/css/main.css
+++ b/public/css/main.css
@@ -225,3 +225,51 @@ a:hover {
 .close-flash:hover{
   cursor: pointer;
 }
+
+
+
+.star-rating{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+.star-rating__wrap{
+	display: inline-block;
+	font-size: 1rem;
+}
+.star-rating__wrap:after{
+	content: "";
+	display: table;
+	clear: both;
+}
+.star-rating__input{
+  float: right;
+  position: relative;
+  width: 0;
+  height: 0;
+  margin: 0 30px 30px 0;
+  cursor: pointer;
+}
+.star-rating__input:before {
+  content: "\f006";
+	color: #FFB300;
+  font-size: 30px;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+	position: absolute;
+  left: 0;
+  top: 0;
+}
+.star-rating__input:hover:before,
+.star-rating__input:hover ~ .star-rating__input:before {
+	content: "\f005";
+  color: #FFD779;
+}
+.star-rating__input:checked:before,
+.star-rating__input:checked ~ .star-rating__input:before
+{
+	content: "\f005";
+	color: #FFB300 !important;
+}
+
