--- a/public/css/main.css
+++ b/public/css/main.css
@@ -117,7 +117,7 @@ a:hover {
   align-items: baseline;
 }
 .imagesWrapper{
-  height: 500px;
+  min-height: 500px;
   width: 85%;
   height: 100%;
   margin: 20px auto;
@@ -151,7 +151,7 @@ a:hover {
   flex-wrap: nowrap;
   justify-content: center;
   width: 70%;
-  height: 500px;  
+  min-height: 500px;  
 }
 .options{
   width: 83%;
@@ -206,8 +206,7 @@ a:hover {
 #reviews{
   overflow: auto;
 }
-.reviews-show{
-}
+
 .show-more-reviews{
   display: none;
   justify-content: center;
@@ -225,6 +224,86 @@ a:hover {
 .close-flash:hover{
   cursor: pointer;
 }
+.cartItemsContainer{
+  min-height: 100px;
+  width:60%;
+  margin:20px auto;
+  border-top:2px solid #ddd;
+  border-bottom:2px solid #ddd;
+}
+.cartItemContainer{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  border-bottom:1px solid #ddd;
+}
+.cartItem{
+  display: flex;
+  flex-wrap: nowrap;
+}
+.cart-item-description{
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width:40%;
+  
+}
+.cartItemControl{
+  width: 60%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+.cartItemControl-buttons{
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+  align-items: flex-end;
+  justify-content: center;
+}
+.cartItemControl-totals{
+  width: 40%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: space-between;
+}
+input[type="number"] {
+  position: relative;
+  margin: 0 0 1rem;
+  border: 1px solid #BBB;
+  border-color: #BBB #ECECEC #ECECEC #BBB;
+  padding: .2rem;
+}
+.quantity{
+  border-radius: 5px;
+  font-size: 15px;
+}
+.quantity::-webkit-inner-spin-button { 
+  opacity: 1;
+}
+.cart-total{
+  width:60%;
+  margin:20px auto;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-end;
+}
+.cart-sum{
+  width: 100px;
+  text-align: right;
+  margin-left: 20px;
+  font-style: italic;
+  font-size:20px;
+  font-weight: 800;
+}
+
+
 
 
 
