--- a/public/css/main.css
+++ b/public/css/main.css
@@ -247,7 +247,7 @@ a:hover {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   width:40%;
   
 }
@@ -303,6 +303,18 @@ input[type="number"] {
 #updateCartItemQuantity{
   display: none;
 }
+.goToCheckout{
+  margin: 0 auto;
+  display: flex;
+  justify-content: flex-end;
+  width: 60%;
+}
+
+.card-errors{
+  color: red;
+}
+
+
 
 
 
@@ -352,3 +364,34 @@ input[type="number"] {
 	color: #FFB300 !important;
 }
 
+/**
+ * The CSS shown here will not be introduced in the Quickstart guide, but shows
+ * how you can use CSS to style your Element's container.
+ */
+ .StripeElement {
+  box-sizing: border-box;
+
+  height: 40px;
+
+  padding: 16px 16px;
+
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  background-color: white;
+
+  box-shadow: 0 1px 3px 0 #e6ebf1;
+  -webkit-transition: box-shadow 150ms ease;
+  transition: box-shadow 150ms ease;
+}
+
+.StripeElement--focus {
+  /*box-shadow: 0 1px 3px 0 #cfd7df;*/
+}
+
+.StripeElement--invalid {
+  border-color: #fa755a;
+}
+
+.StripeElement--webkit-autofill {
+  background-color: #fefde5 !important;
+}
