--- a/public/css/main.css
+++ b/public/css/main.css
@@ -373,10 +373,59 @@ textarea:focus, input:focus{
   justify-content:space-between;
   margin-top:5px;
 }
+.about{
+  display: flex;
+  flex-direction: column;
+  margin-top: 7%;
+  color:#fff;
+}
 
-
-
-
+.about-body{
+  width: 60%;
+  font-family: 'Roboto';
+}
+.statistics{
+  width: 70%;
+  margin-top: 2%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+}
+.statistics-item{
+  max-width: 20%;
+}
+.statistics-item-header{
+  color: #FFB300;
+  min-height: 100px;
+  display: flex;
+  align-items: center;
+}
+.statistics-item-header h2{
+  font-size: 60px;
+}
+#about-background{
+  width: 100%;
+  height: 91.3%;
+  position: absolute;
+  z-index: -2;
+}
+#about-background2{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-image: url("/images/shop.jpg");
+  background-size: cover;
+  background-position: center;
+  z-index: -4;
+}
+#about-background3{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: rgba(001, 001, 001, 0.8);
+  z-index: -1;
+}
 
 
 
