--- a/public/css/main.css
+++ b/public/css/main.css
@@ -46,12 +46,23 @@ a:hover {
 .products{
   width: 78%; 
 }
-.news{
+.from-blog{
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  min-width: 60%;
+  max-width: 80%;
+}
+.from-blog-title{
+  display: flex;
+  justify-content: center;
+}
+.from-blog-articles{
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  width: 90%;
+  flex-wrap: nowrap;
+  justify-content: space-evenly;
+  margin-bottom: 40px;
 }
 .about{
   display: flex;
